# general_operate

./: .gitignore  KAFKA_architecture_consolidation_REPORT.md  Makefile  README.md  pyproject.toml
docs/: cache-strategy-flow.mmd  crud-operation-sequence.mmd  data-flow-architecture.mmd  general-operate-architecture.mmd  new_methods_documentation.md
docs/technical/: architecture.rst
examples/: README.md  docker-compose.kafka.yml  enhanced_kafka_integration_example.py  error_handling_and_logging_example.py  kafka_config_example.py  kafka_configuration_template.yaml  kafka_integration_example.py  kafka_service_config.yaml  new_methods_usage.py  order_service_example.py
general_operate/: __init__.py  config.py  general_operate.py
general_operate/app/: cache_operate.py  influxdb_operate.py  sql_operate.py
general_operate/app/client/: database.py  influxdb.py  redis_db.py
general_operate/core/: __init__.py  decorators.py  exceptions.py  logging.py
general_operate/kafka/: __init__.py  config.py  consumer_operate.py  dlq_handler.py  enhanced_client.py  event_bus.py  exceptions.py  kafka_client.py  kafka_operate.py  manager_config.py  middleware_factory.py  producer_operate.py  service_event_manager.py  service_initializer.py  validation.py
general_operate/kafka/models/: __init__.py  event_message.py
general_operate/kafka/utils/: __init__.py  serializers.py
general_operate/utils/: build_data.py  exception.py  json_encoder.py
scripts/: run_tests.sh
tests/: README.md  conftest.py  run_kafka_tests.py  run_modernized_kafka_tests.py  test_100_percent_coverage.py  test_api_tutorial_operator.py  test_cache_operate_100_coverage.py  test_cache_operate_complete.py  test_cache_refactoring.py  test_clients.py  test_comprehensive_cache_operate.py  test_comprehensive_general_operate.py  test_comprehensive_general_operate_part2.py  test_comprehensive_sql_operate.py  test_comprehensive_sql_operate_part2.py  test_core.py  test_dlq_handler.py  test_enhanced_json_encoder.py  test_final_100_coverage.py  test_full_coverage.py  test_full_coverage_final.py  test_general_operate.py  test_general_operate_advanced_coverage.py  test_general_operate_complete.py  test_general_operate_complete_fixes.py  test_general_operate_coverage_boost.py  test_general_operate_final.py  test_general_operate_final_coverage.py  test_general_operate_improved_coverage.py  test_general_operate_ultimate_coverage.py  test_influxdb_operate.py  test_integration.py  test_integration_kafka.py  test_kafka_client.py  test_kafka_modern_performance.py  test_kafka_modernization_integration.py  test_kafka_security_edge_cases.py  test_kafka_serializers.py  test_manager_config.py  test_missing_coverage.py  (+14 more)
tests/test_kafka/: test_consumer_operate.py  test_event_bus.py  test_event_message.py  test_exceptions.py  test_kafka_integration.py  test_kafka_operate.py  test_producer_operate.py  test_serializers.py
tests/unit/: test_schemas.py
tutorial/: main.py
tutorial/SQL/: models.py
tutorial/routers/: API_tutorial.py
tutorial/routers/operator/: API_tutorial.py  api_schemas.py
tutorial/schemas/: __init__.py  subtable.py  tutorial.py
